<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.keecode.zanukamobile.activity.setup.SetupFirst"
    android:background="@drawable/zanuka_background"
    android:id="@+id/setup_first_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setup_first_app_name"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="40dp"
        android:layout_marginTop="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text="@string/setup_first_welcome"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30dp"
        android:layout_below="@+id/setup_first_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/setup_first_infotext"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="25dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/setup_first_app_name"
        android:layout_alignEnd="@+id/setup_first_app_name"
        android:layout_alignLeft="@+id/setup_first_app_name"
        android:layout_alignStart="@+id/setup_first_app_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/setup_first_number"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="52dp"
        android:background="@drawable/zanuka_edit_text"
        android:phoneNumber="true"
        android:hint="Ex. (+41 xx xxx xx xx)"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textAlignment="center"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_first_continue"
        android:id="@+id/setu_first_continue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:theme="@style/ZanukaButton"
        android:background="@drawable/zanuka_button"
        android:elevation="10dp" />

</RelativeLayout>
