<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.keecode.zanukamobile.activity.setup.SetupVerify"
    android:background="@drawable/zanuka_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text="@string/setup_verify_title"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30dp"
        android:layout_marginTop="77dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/setup_verify_infotext"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="25dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/setup_verify_code"
        android:background="@drawable/zanuka_edit_text"
        android:phoneNumber="true"
        android:hint="Ex. (079 901 52 54)"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textAlignment="center"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:text="Ex. (123456)" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setup_first_continue"
        android:id="@+id/setup_verify_continue"
        android:layout_marginBottom="57dp"
        android:theme="@style/ZanukaButton"
        android:background="@drawable/zanuka_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:text="@string/setup_verify_infotext2"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="25dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="50dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

</RelativeLayout>
